fix misaligned containers

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -289,8 +289,12 @@ select:focus{
 
 /* IDs */
 #confirmoverlay{
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
   position: fixed;
   z-index: 999;
   background-color: rgba(0,0,0,0.75);
